--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL = "http://localhost:8000"
-# REACT_APP_API_URL = "https://ec2-13-233-162-212.ap-south-1.compute.amazonaws.com"
+# REACT_APP_API_URL = "http://ec2-43-204-102-78.ap-south-1.compute.amazonaws.com"
 # REACT_APP_API_URL = "https://api.klout.club"
