--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-REACT_APP_API_URL = "http://localhost:8000"
-# REACT_APP_API_URL = "http://ec2-43-204-102-78.ap-south-1.compute.amazonaws.com"
-# REACT_APP_API_URL = "https://api.klout.club"
+# REACT_APP_API_URL = "http://localhost:8000"
+REACT_APP_API_URL = "http://ec2-13-201-57-164.ap-south-1.compute.amazonaws.com"
