latest changes on 10 june 2024

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-# REACT_APP_API_URL = "http://localhost:8000"
-REACT_APP_API_URL = "https://api.klout.club/marketing/"
+REACT_APP_API_URL = "http://localhost:8092/api/marketing"
+
+# REACT_APP_API_URL = "https://app.klout.club/api/marketing/"
+
+
+KLOUT_CLUB_APP_API_URL = "https://api.klout.club/"
